--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -2,30 +2,47 @@
     ViewData["Title"] = "Privacy Policy";
 }
 
-<div>GET IN TOUCH YOUR CONTRIBUTION IS IMPORTANT TO US</div>
 <!-- Contact form -->
-<div class="contactForm">
-  <div class="form-group ">
-  <label class="control-label col-sm-2" for="lname">Last Name:</label>
-  <div class="col-sm-10">
-  <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname">
-  </div>
-  </div>
-  <div class="form-group">
-  <label class="control-label col-sm-2" for="email">Email:</label>
-  <div class="col-sm-10">
-  <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-  </div>
-  </div>
-  <div class="form-group">
-  <label class="control-label col-sm-2" for="comment">Comment:</label>
-  <div class="col-sm-10">
-  <textarea class="form-control" rows="5" id="comment"></textarea>
-  </div>
-  </div>
-  <div class="form-group">
-  <div class="col-sm-offset-2 col-sm-10">
-  <button type="submit" class="btn btn-default">Submit</button>
+
+    
+<div class="card">
+  <div class="card-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <form  method = "post" action = "SendMail">
+            <div class="contactForm">
+              <div class="form-group ">
+              <label class="control-label col-sm-2" for="lname">Last Name:</label>
+              <div class="col-sm-10">
+              <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname">
+              </div>
+              </div>
+              <div class="form-group">
+              <label class="control-label col-sm-2" for="email">Email:</label>
+              <div class="col-sm-10">
+              <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+              </div>
+              </div>
+              <div class="form-group">
+              <label class="control-label col-sm-2" for="comment">Comment:</label>
+              <div class="col-sm-10">
+              <textarea class="form-control" rows="5" id="comment"></textarea>
+              </div>
+              </div>
+              
+              <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default">Submit</button>
+              </div>
+            </div>
+          </form>      
+        </div>
+        <div class="col-sm" style="color:#D3D3D3;padding-top:125px" >
+          <h5>Email</h5>
+          <h4>ryewoodmanagementco@gmail.com</h4>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
