--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,9 +25,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
     />
 </head>
-<body>
+<body style="background-color:#E0E0E0">
    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav style="background-color: #1b3e93;color:white;padding-bottom:0px" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom text-light box-shadow">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Ryewood Residents</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -37,10 +37,13 @@
                 <div class="navbar-collapse collapse d-sm-flex justify-content-end"> <!-- Modified class -->
                     <ul class="navbar-nav">
                         <li class="nav-item ml-auto"> <!-- Added class -->
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item ml-auto"> <!-- Added class -->
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="News">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -49,24 +52,37 @@
     </header>
 
     <div>
-        <main role="main" class="pb-3" style="height: 2500px;">
+        <main role="main" style="height: 1250px;"  >
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="background-color:#1b3e93">
         <div class="container">
             &copy; 2023 - Ryewood Residents - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="@Url.Content("~/lib/jquery/dist/jquery.min.js")"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
     <script src="@Url.Content("~/lib/bootstrap/dist/js/bootstrap.bundle.min.js")"></script>
     <script src="@Url.Content("~/js/site.js")" asp-append-version="true"></script>
      <!-- MDB -->
     <script type="text/javascript" src="@Url.Content("~/js/mdb.min.js")" ></script>
 
-
+    <link rel="stylesheet" href="~/font-awesome-4.7.0/css/font-awesome.min.css">
     <!-- Custom scripts -->
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+<style>
+    .navbar-light .navbar-brand {
+        color: white !important;
+    }
+    .navbar {
+        height: 100px
+    }
+    
+</style>
