Worked on look and feel, converted to single page

--- a/Views/Home/News.cshtml
+++ b/Views/Home/News.cshtml
@@ -12,7 +12,7 @@
 <div style="max-width: 1250px; margin: auto;" >
 <div class="card" style="margin-top:10px">
         <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">GET IN TOUCH YOUR CONTRIBUTION IS IMPORTANT TO US</h6>
+          <h6 class="card-subtitle mb-2 text-muted"><h5>Directors Update - 9th May 2023</h5><br/>
         <div class="row">
           <div class="col-10">
             <div class="introText" id="story1">
@@ -47,13 +47,13 @@
           </div>
 
           <div class="col-2">
-            <a href="#" onClick="hideAllNews();$('#story1').show();"><i class="fa fa-calendar-o" aria-hidden="true"></i> 14th May 2016</a><br/>
-            <a href="#" onClick="hideAllNews();$('#story2').show();"><i class="fa fa-calendar-o" aria-hidden="true"></i> 4th May 2016</a><br/>
-            14th May 2016<br/>
-            14th May 2016<br/>
+            <a href="#" onClick="hideAllNews();$('#story1').show();"><i class="fa fa-calendar-o" aria-hidden="true"></i> 9th May 2023</a><br/>
+            <div style="height:5px"></div>
+            <a href="#" onClick="hideAllNews();$('#story2').show();"><i class="fa fa-calendar-o"  aria-hidden="true"></i> &nbsp;4th Jun 2023</a><br/>
           </div>
         </div>
         </div>
     </div>
 </div>
 </div>
+<br/>
