--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -7,42 +7,48 @@
     
 <div class="card">
   <div class="card-body">
-    <div class="container">
       <div class="row">
-        <div class="col-sm">
+        <div class="col-lg-8">
           <form  method = "post" action = "SendMail">
             <div class="contactForm">
               <div class="form-group ">
-              <label class="control-label col-sm-2" for="lname">Last Name:</label>
-              <div class="col-sm-10">
+              <label class="control-label col-xl-2" for="lname">Last Name:</label>
+              <div class="col-lg-10">
               <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname">
               </div>
               </div>
               <div class="form-group">
-              <label class="control-label col-sm-2" for="email">Email:</label>
-              <div class="col-sm-10">
+              <label class="control-label col-lg-2" for="email">Email:</label>
+              <div class="col-lg-10">
               <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
               </div>
               </div>
               <div class="form-group">
-              <label class="control-label col-sm-2" for="comment">Comment:</label>
-              <div class="col-sm-10">
+              <label class="control-label col-lg-2" for="comment">Comment:</label>
+              <div class="col-lg-10">
               <textarea class="form-control" rows="5" id="comment"></textarea>
               </div>
               </div>
               
-              <div class="col-sm-offset-2 col-sm-10">
+              <div class="col-lg-offset-2 col-lg-10">
                 <button type="submit" class="btn btn-default">Submit</button>
               </div>
             </div>
           </form>      
         </div>
-        <div class="col-sm" style="color:#D3D3D3;padding-top:125px" >
-          <h5>Email</h5>
-          <h4>ryewoodmanagementco@gmail.com</h4>
+        <div class="col-lg-4" style="padding-top:15px;width:425px">
+          <h5>Ryewood Management Committee</h5>
+          <h4 style="color:#D3D3D3;padding-bottom:20px">ryewoodmanagementco@gmail.com</h4>
+
+          <h5>RGM - James Hopkinson</h5>
+          <h4 style="color:#D3D3D3;padding-bottom:20px">James.Hopkinson@rmg.london</h4>
+
+
+          <h5>RMG - Out of Hours Emergency:</h5>
+          <h4 style="color:#D3D3D3">0345 002 4444</h4>
         </div>
       </div>
-    </div>
+
   </div>
 </div>
 
