--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <!-- Carousel wrapper -->
 <div  style="max-width: 1250px; margin: auto;" style="padding-top:0px">
-  <div id="carouselBasicExample" class="carousel slide carousel-fade" data-mdb-ride="carousel">
+  <div id="carouselBasicExample" data-interval=5000 class="carousel slide carousel-fade" data-mdb-ride="carousel">
     <!-- Indicators -->
     <div class="carousel-indicators">
       <button
@@ -35,19 +35,17 @@
     <div class="carousel-inner">
       <!-- Single item -->
       <div class="carousel-item active">
-        <img src="~/images/house-at-night.jpg"  height="500" class="d-block w-100" alt="Sunset Over the City"/>
+        <img src="~/images/yellow-field-2.jpg"   height="500"  class="d-block w-100" alt="Canyon at Nigh"/>
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          <h1>Welcome to the Ryewood Residents Portal</h1>
         </div>
       </div>
 
       <!-- Single item -->
       <div class="carousel-item">
-        <img src="~/images/yellow-field-2.jpg"   height="500"  class="d-block w-100" alt="Canyon at Nigh"/>
+        <img src="~/images/house-at-night.jpg"  height="500" class="d-block w-100" alt="Sunset Over the City"/>
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <h1>Welcome to the Ryewood Residents Portal</h1>
         </div>
       </div>
 
@@ -55,8 +53,7 @@
       <div class="carousel-item">
         <img src="~/images/Swan in mist by Fran French.webp"  height="500" class="d-block w-100" alt="Cliff Above a Stormy Sea"/>
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          <h1>Welcome to the Ryewood Residents Portal</h1>
         </div>
       </div>
     </div>
@@ -75,25 +72,50 @@
 <!-- Carousel wrapper -->
 
 <!-- Main welcome text -->
-<div class="mainWelcomText">Ryewood Residents Association is a co-educational day and boarding school for 11 to 18-year-olds</div>
+<div class="mainWelcomText" >Message from the Board of Directors</div>
 <!-- End of welcome text -->
 
-<div class="card">
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">GET IN TOUCH YOUR CONTRIBUTION IS IMPORTANT TO US</h6>
-          
-          <div>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa vitae tortor condimentum lacinia quis vel eros donec. Mi tempus imperdiet nulla malesuada pellentesque elit eget gravida cum. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Massa enim nec dui nunc mattis enim ut tellus. Amet risus nullam eget felis eget. Vulputate ut pharetra sit amet aliquam id diam maecenas ultricies. A diam maecenas sed enim ut sem viverra aliquet. Id donec ultrices tincidunt arcu non sodales neque. Pretium lectus quam id leo. Ut pharetra sit amet aliquam id diam maecenas ultricies mi.
-          </div> <br/>
-          <div>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa vitae tortor condimentum lacinia quis vel eros donec. Mi tempus imperdiet nulla malesuada pellentesque elit eget gravida cum. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Massa enim nec dui nunc mattis enim ut tellus. Amet risus nullam eget felis eget. Vulputate ut pharetra sit amet aliquam id diam maecenas ultricies. A diam maecenas sed enim ut sem viverra aliquet. Id donec ultrices tincidunt arcu non sodales neque. Pretium lectus quam id leo. Ut pharetra sit amet aliquam id diam maecenas ultricies mi.
-          </div>
-
+<div>
+      <div>
+        <!--<h6 class="card-subtitle mb-2 text-muted">GET IN TOUCH YOUR CONTRIBUTION IS IMPORTANT TO US</h6> -->
         
-     
-        </div>
+        <div>
+          We are a group of residents who have volunteered to join the Ryewood Residents Management Company Ltd as Directors to ensure that our beautiful Development is run and kept at its best.
+          We are a group of residents who have volunteered to join the Ryewood Residents Management Company Ltd as Directors to ensure that our beautiful Development is run and kept at its best.
+        </div> <br/>
+        <div>
+          We are a group of residents who have volunteered to join the Ryewood Residents Management Company Ltd as Directors to ensure that our beautiful Development is run and kept at its best.
+          We are a group of residents who have volunteered to join the Ryewood Residents Management Company Ltd as Directors to ensure that our beautiful Development is run and kept at its best.
+        </div> <br/>
       </div>
+    </div>
+</div>
+<br/>
+<div class="whatCanWeHelpYouWith" id="news" style="padding-left: 45px;">
+  NEWS
+</div>
+
+<div  style="max-width: 1250px; margin: auto;"  style="padding-top:0px">
+  <div>
+    <table cellpadding="0" cellspacing="0" border="1" class="table table-bordered newsTable">
+      <tr>
+        <td style="width: 80%;">Update from the Board of Directors</td>
+        <td><image src="/images/Calandar.png" style="padding-right: 15px;" /> January 10th 2023</td>
+      </tr>
+      <tr>
+        <td style="width: 80%;">Update from the Board of Directors</td>
+        <td><image src="/images/Calandar.png" style="padding-right: 15px;" /> January 10th 2023</td>
+      </tr>
+    </table>
   </div>
+</div>
+
+
+<div style="height: 50px;" id="contact"></div>
+<div class="whatCanWeHelpYouWith" style="padding-left: 45px;">
+  GET IN TOUCH YOUR CONTRIBUTION IS IMPORTANT
+</div>
+
 
 <!-- Mid text -->
 <!-- End of Mid text -->
@@ -185,29 +207,128 @@
 -->
 <!-- End of get in touch -->
 
+<div  style="height: 55px;"></div>
+<div  style="max-width: 1250px; margin: auto;" style="padding-top:0px">
+        <div class="row">
+          <div class="col-lg-7">
+            <form  method = "post" action = "SendMail">
+              <div class="contactForm">
+                <div class="form-group ">
+                <div class="col-lg-10">
+                <input type="text" class="form-control" placeholder="Full name" id="lname" name="lname">
+                </div>
+                </div>
 
-<!-- End of contact form -->
+                <div class="form-group ">
+                <div class="col-lg-10">
+                <input type="text" class="form-control" placeholder="Address" id="lname" name="lname">
+                </div>
+                </div>
+
+
+
+                <div class="form-group">
+                <div class="col-lg-10">
+                <input type="email" class="form-control" placeholder="Email" id="email" name="email">
+                </div>
+                </div>
+                <div class="form-group">
+                <div class="col-lg-10">
+                <textarea class="form-control" placeholder="Message" rows="5" id="comment"></textarea>
+                </div>
+                </div>
+                
+                <div class="col-lg-offset-2 col-lg-10">
+                  <button type="submit" class="headerButton">Send message</button>
+                </div>
+              </div>
+            </form>      
+          </div>
+          <div class="col-lg-5" style="padding-top:0px;width:425px">
+            <div class="contactEmailsHeader">Ryewood&nbsp;Residents&nbsp;Management&nbsp;Company</div>
+            <div class="contactEmails">ryewoodmanagementco@gmail.com</div>
+
+            <div style="height: 25px;"></div>
+
+            <div class="contactEmailsHeader">RMG PROPERTY MANAGERS</div>
+            <div class="contactEmails">adam.norwood@rmg.london</div>
+            <div class="contactEmails">james.hopkinson@rmg.london</div>
+            <div class="contactEmails">0207 598 1600</div>
+            <div class="contactEmails">0345 002 4444 - out of hours emergency</div>
+
+            <div style="height: 25px;"></div>
+
+            <div class="contactEmailsHeader">Caretaker</div>
+            <div class="contactEmails">michael.brown@rmg.london</div>
+            <div class="contactEmails">XXX XXX XXXX</div>
+
+            <div style="height: 15px;"></div>
+
+           
+          </div>
+        </div>
+
+</div>
+
+<!-- End of contact form 
+Yellows
+#EEE904;
+#c9c304;
+GREEN
+#617E4D
+Orange
+#F7730E
+-->
 
 <style>
+  .newsTable {
+   margin-top: 45px;
+   font-family: Roboto;
+   font-size: 16px;
+  }
+  .siteButton {
+    padding: 5px;
+    background-color:#EEE904;
+  }
+  .contactEmails {
+      font-size:18px;
+      color: #c9c304;
+      padding-left: 20px;
+      font-weight: 600;
+  }
+  .contactEmailsHeader {
+    font-size: 17px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: Arial;
+  }
+
+  .contactForm {
+      width: 750px
+  }
+
   .mainWelcomText {
     text-align: center;
     padding-top: 30px;
     padding-bottom: 30px;
-    color: #1b3e93;
     font-size: 34px;
+    color:#617E4D;
+    font-family: Lato Black;
+    font-style: italic;
   }
 
   .whatCanWeHelpYouWith {
-    text-align: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    text-align: left;
+    padding-top: 10px;
+    padding-bottom: 10px;
     color: #617E4D;
-    font-size: 44px;
+    font-size: 34px;
     background-color: #deebdd;
     border-bottom-style: dashed;
     border-bottom-width: 1px;
     border-top-style: dashed;
     border-top-width: 1px;
+    font-family: Lato Black;
   }
 
   .announcements {
@@ -233,6 +354,10 @@
       padding-top: 10px;
       padding-bottom: 10px;
 
+  }
+
+  .carousel-caption {
+    padding-bottom: 250px;
   }
 
   
