--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,25 +25,28 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
     />
 </head>
-<body style="background-color:#E0E0E0">
+<body style="background-color: #FFFFFF;">
    <header>
-        <nav style="background-color: #1b3e93;color:white;padding-bottom:0px" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom text-light box-shadow">
+        <nav style="background-color: #FFFFFF;color:black;padding-bottom:0px" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom text-light box-shadow">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Ryewood Residents</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="font-family:Arial Black; padding-left:25px;font-size:24px">Ryewood</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-flex justify-content-end"> <!-- Modified class -->
-                    <ul class="navbar-nav">
-                        <li class="nav-item ml-auto"> <!-- Added class -->
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+
+
+                <div style="padding-right: 35px;" class="navbar-collapse collapse d-sm-flex justify-content-end"> <!-- Modified class -->
+                    <ul class="navbar-nav" >
+                        <li class="nav-item ml-auto" > <!-- Added class -->
+                            <button class="headerButton" onclick="javascript:document.location='#contact'">Home</button>
+                            <!--<a class="nav-link"  asp-area="" asp-controller="Home" asp-action="Index">Home</a>-->
                         </li>
-                        <li class="nav-item ml-auto"> <!-- Added class -->
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="News">News</a>
+                        <li class="nav-item ml-auto" style="padding-left:15px"> <!-- Added class -->
+                            <button class="headerButton" onclick="javascript:document.location='#news'">News</button>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+                        <li class="nav-item" style="padding-left:15px">
+                            <button class="headerButton" onclick="javascript:document.location='#contact'">Contact</button>
                         </li>
                     </ul>
                 </div>
@@ -52,14 +55,14 @@
     </header>
 
     <div>
-        <main role="main" style="height: 1250px;"  >
+        <main role="main" style="height: 1750px;"  >
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="background-color:#1b3e93">
+    <footer class="border-top footer text-muted" style="background-color:#e0e0e0">
         <div class="container">
-            &copy; 2023 - Ryewood Residents - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - Netsterling 
         </div>
     </footer>
 
@@ -78,11 +81,43 @@
 </html>
 
 <style>
+    .form-control {
+        border:1px solid #E0E0E0;
+        margin-top: 5px; 
+        border-radius: 0px;  
+        font-family: Roboto;
+        
+    }
+    .headerButton {
+        color:black !important;
+        font-family: Arial;
+        letter-spacing: 5px;
+        font-weight: bold;
+        background-color: #FFFFFF;
+        padding-left: 12px;
+        padding-right: 8px;
+        padding-top: 1px;
+        padding-bottom: 1px;
+        margin-top: 5px;
+
+    }
     .navbar-light .navbar-brand {
-        color: white !important;
+        color: black !important;
     }
     .navbar {
-        height: 100px
+        height: 75px;
+        border-bottom: 0px !important;
     }
+    .header-button {
+        border-style: 1px black;
+    }
+    .nav-link {
+        color:black !important;
+        font-family: Arial;
+        letter-spacing: 5px;
+        font-weight: bold;
+
+    }
+
     
 </style>
