--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     />
 </head>
 <body style="background-color: #FFFFFF;">
-   <header>
+   <header id="home">
         <nav style="background-color: #FFFFFF;color:black;padding-bottom:0px" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom text-light box-shadow">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="font-family:Arial Black; padding-left:25px;font-size:24px">Ryewood</a>
@@ -39,7 +39,7 @@
                 <div style="padding-right: 35px;" class="navbar-collapse collapse d-sm-flex justify-content-end"> <!-- Modified class -->
                     <ul class="navbar-nav" >
                         <li class="nav-item ml-auto" > <!-- Added class -->
-                            <button class="headerButton" onclick="javascript:document.location='#contact'">Home</button>
+                            <button class="headerButton" onclick="javascript:document.location='#home'">Home</button>
                             <!--<a class="nav-link"  asp-area="" asp-controller="Home" asp-action="Index">Home</a>-->
                         </li>
                         <li class="nav-item ml-auto" style="padding-left:15px"> <!-- Added class -->
@@ -60,11 +60,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="background-color:#e0e0e0">
-        <div class="container">
-            &copy; 2023 - Netsterling 
-        </div>
-    </footer>
+   
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -81,6 +77,20 @@
 </html>
 
 <style>
+
+  .footer {
+    text-align: left;
+    font-size: 14px;
+    background-color: #ffffff;
+    border-bottom-style: dashed;
+    border-bottom-width: 1px;
+    border-top-style: dashed;
+    border-top-width: 1px;
+    font-family: Lato Black;
+    height: 65px;
+    color: #989898;
+  }
+
     .form-control {
         border:1px solid #E0E0E0;
         margin-top: 5px; 
@@ -99,6 +109,7 @@
         padding-top: 1px;
         padding-bottom: 1px;
         margin-top: 5px;
+        border-width: 1px;
 
     }
     .navbar-light .navbar-brand {
